# Mailing

./: .gitignore  README.md  pyproject.toml
config/: settings.py
mailig_app/: apps.py
